--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -113,4 +113,5 @@
 {% block javascripts %}
     {{ parent() }}
     {{ encore_entry_script_tags('addFile') }}
+    {{ encore_entry_script_tags('rightTab') }}
 {% endblock %}
