--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,11 +9,18 @@
                     <h1 class="text-primary">Register as {{ (app.request.attributes.get('_route') == 'app_register') ? 'a Member' : 'an Organization' }}</h1>
                     {% form_theme registrationForm 'bootstrap_4_layout.html.twig' %}
                     {{ form_start(registrationForm) }}
+                    {% if not isOrganization %}
                     {{ form_row(registrationForm.firstname) }}
                     {{ form_row(registrationForm.lastname) }}
                     <p>Birthdate</p>
                     {{ form_row(registrationForm.birthdate) }}
                     {{ form_rest(registrationForm) }}
+                    {% else %}
+                    {{ form_row(registrationForm.organization.name) }}
+                    {{ form_row(registrationForm.organization.address) }}
+                    {{ form_row(registrationForm.organization.registrationNb) }}
+                    {{ form_rest(registrationForm) }}
+                    {% endif %}
                     <button type="submit" class="btn btn-primary">Register</button>
                     {{ form_end(registrationForm) }}
 {% endblock %}
