Centralisation des modif homepage sur le easyadmin

--- a/templates/component/homepage/_homecarousel.html.twig
+++ b/templates/component/homepage/_homecarousel.html.twig
@@ -1,4 +1,4 @@
-<div class="carousel slide" id="home-carousel" data-ride="carousel">
+<div class="carousel slide" id="home-carousel" data-ride="carousel" data-interval="5000" data-pause=false>
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
