--- a/templates/component/dashboard/_user_received_recommendations.html.twig
+++ b/templates/component/dashboard/_user_received_recommendations.html.twig
@@ -39,5 +39,5 @@
         {% endfor %}
     {% endif %}
 {% else %}
-    <p class="font-italic">You don't have recommendations yet</p>
+    <p class="alert alert-secondary-alt">You don't have recommendations yet</p>
 {% endif %}
