--- a/templates/component/message/_messages.html.twig
+++ b/templates/component/message/_messages.html.twig
@@ -27,7 +27,7 @@
                                 </div>
                             {% endfor %}
                 {% else %}
-                    <h2>You don't have messages yet</h2>
+                    <p class="alert alert-secondary-alt">You don't have messages yet</p>
                 {% endif %}
                     </div>
                 </div>
