--- a/templates/component/dashboard/_user_skill_form.html.twig
+++ b/templates/component/dashboard/_user_skill_form.html.twig
@@ -11,13 +11,13 @@
     </div>
     <div class="row justify-content-center">
         {% for element in user_known_skill_form.skills.vars.choices %}
-            <div class="col-12 col-md-5 card text-white bg-gradient-blueish p-3 m-1">
+            <div class="col-12 col-md-5 card text-blueish bg-transparent p-3 m-1">
                 <div class="card-header bg-transparent"><h3>{{ element.label }}</h3></div>
                 <div class="card-body bg-light text-dark">
 
                     {% for choice in element.choices %}
-                        <div class="skillset-card">
-                            <label title="{{ choice.label }}" for="user_known_skill_skills_{{ choice.value }}">{{ choice.label }}</label>
+                        <div class="skillset-card mb-3">
+                            <label class="mb-1 text-wrap" title="{{ choice.label }}" for="user_known_skill_skills_{{ choice.value }}">{{ choice.label }}</label>
                             <input {{ choice.value in user_known_skill_form.skills.vars.value ? 'checked' : ''}}  type="checkbox" id="user_known_skill_skills_{{ choice.value }}" name="user_known_skill[skills][]" value="{{ choice.value }}">
                             <span class="check"></span>
                         </div>
@@ -26,7 +26,7 @@
                 </div>
             </div>
         {% endfor %}
-        <div class="col-12 col-md-6 card text-white bg-gradient-blueish p-3 m-1">
+        <div class="col-12 col-md-6 card text-blueish bg-transparent p-3 m-1">
             <div class="card-header bg-transparent"><h3>Others</h3></div>
             <div class="card-body bg-light text-dark">
                 <a class="skillset-card">
