--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -5,18 +5,54 @@
 {% block framed %}
 
     <h1 class="text-primary">Create a new request</h1>
-        {% form_theme form 'bootstrap_4_layout.html.twig' %}
-        {{ form_start(form) }}
+    {% form_theme form 'bootstrap_4_layout.html.twig' %}
+    {{ form_start(form) }}
     {{ form_row(form.title) }}
     <div class="form-group">
         <label for="project_description" class="required">Description</label>
-        <textarea name="project[description]" id="project_description" class="descriptionProject" required="required"></textarea>
+        <textarea name="project[description]" id="project_description" class="descriptionProject"
+                  required="required"></textarea>
     </div>
+    <h6>Image</h6>
     {{ form_row(form.coverFile) }}
-    {{ form_row(form.sdgs) }}
-    {{ form_row(form.skills) }}
-        <button class="btn btn-primary mb-3">Create a request</button>
-        {{ form_end(form, {'render_rest': false}) }}
+    <h6>Sustainable Development Goals (SDGs)</h6>
+    <div class="row justify-content-center mb-3">
+
+        {% for sdg in form.sdgs.vars.choices %}
+            <div class="form-check m-1 mr-4">
+                <input type="checkbox" id="project_sdgs_{{ sdg.value }}" name="project[sdgs][]"
+                       class="form-check-input" value="{{ sdg.value }}">
+                <label class="form-check-label" for="project_sdgs_{{ sdg.value }}"></label><img
+                        src="{{ asset('build/images/sdg_icons/' ~ sdg.data.image) }}" alt="sdgPicture"
+                        style="width: 100px;">
+            </div>
+        {% endfor %}
+    </div>
+    <h6>Skills</h6>
+    <div class="row justify-content-center">
+        {% for element in form.skills.vars.choices %}
+            <div class="col-md-5 card text-blueish m-2">
+                <div class="card-header bg-transparent mb-3 p-1"><h5>{{ element.label }}</h5></div>
+                <div class="card-body bg-light text-dark p-0">
+
+                    {% for choice in element.choices %}
+                        <div class="skillset-card mb-3">
+                            <label class="mb-1 text-wrap form-check-label" title="{{ choice.label }}"
+                                   for="project_skills_{{ choice.value }}">{{ choice.label }}</label>
+                            <input {{ choice.value in form.skills.vars.value ? 'checked' : '' }} type="checkbox"
+                                                                                                 class="form-check-input"
+                                                                                                 id="project_skills_{{ choice.value }}"
+                                                                                                 name="project[skills][]"
+                                                                                                 value="{{ choice.value }}">
+                            <span class="check"></span>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    <button class="btn btn-primary mb-3">Create a request</button>
+    {{ form_end(form, {'render_rest': false}) }}
 
 {% endblock %}
 
