--- a/assets/styles/web-home.scss
+++ b/assets/styles/web-home.scss
@@ -54,6 +54,15 @@ html {
   }
 }
 
+.carousel,.item,.active{
+  height:500px;
+  width:100%;
+}
+#home-carousel, .carousel-inner{
+  height:500px;
+  width:100%;
+}
+
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
   display: block;
   height: 400px;
@@ -103,4 +112,5 @@ html {
 
 .lead {
   text-shadow: white 1px 0 12px;
+
 }
