--- a/templates/component/homepage/_concept.html.twig
+++ b/templates/component/homepage/_concept.html.twig
@@ -3,8 +3,8 @@
         <div class="row justify-content-center">
         <div class="col-lg-8 col-sm-12">
             <h2 class="text-primary">{{ home_content.section1Title }}</h2>
-            <p class="lead text-dark" >
-                {{ home_content.section1Content }}
+            <p class="h2 lead text-dark" >
+                {{ home_content.section1Content|raw }}
                  </p>
         </div>
         <div class="col-lg-4 col-sm-12 d-flex d-flex justify-content-center">
