--- a/templates/component/homepage/_howdoesitwork.html.twig
+++ b/templates/component/homepage/_howdoesitwork.html.twig
@@ -7,7 +7,7 @@
             <div class="row my-5 p-5">
                 <div class="col-lg-5 d-flex flex-column justify-content-center p-5">
                     <p class="lead text-dark" >
-                        {{ home_content.section3Video1Content }}                    </p>
+                        {{ home_content.section3Video1Content|raw }}                    </p>
                 </div>
                 <div class="col-lg-7 embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="{{ home_content.section3Video1 }}" options=""></iframe>
@@ -20,7 +20,7 @@
                 </div>
                 <div class="col-lg-5 d-flex flex-column justify-content-center p-5">
                     <p class="lead text-dark" >
-                        {{ home_content.section3Video2Content }} </p>
+                        {{ home_content.section3Video2Content|raw }} </p>
                 </div>
 
             </div>
