--- a/templates/component/homepage/_questionsanswers.html.twig
+++ b/templates/component/homepage/_questionsanswers.html.twig
@@ -3,6 +3,24 @@
         <h2 class="text-primary">Q&A</h2>
         <div id="accordion">
 
+            {% for faq in faqs %}
+                <div class="card">
+                    <div class="card-header" id="heading{{ faq.numero }}">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse{{ faq.numero }}" aria-expanded="false" aria-controls="collapse{{ faq.numero }}">
+                                {{ faq.title }}
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapse{{ faq.numero }}" class="collapse" aria-labelledby="heading{{ faq.numero }}" data-parent="#accordion">
+                        <div class="card-body">
+                            {{ faq.content|raw }}
+                    </div>
+                </div>
+            {% endfor %}
+
+
+
             <div class="card">
                 <div class="card-header" id="headingOne">
                     <h5 class="mb-0">
@@ -18,19 +36,7 @@
                 </div>
             </div>
 
-            <div class="card">
-                <div class="card-header" id="headingTwo">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            How can I participate ?
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                    <div class="card-body">
-                        It is very simple, Create an account and start exploring the registered project. Then register your skills and find the project you want to volunteer            </div>
-                </div>
-            </div>
+
 
             <div class="card">
                 <div class="card-header" id="headingThree">
