--- a/templates/component/homepage/_intro.html.twig
+++ b/templates/component/homepage/_intro.html.twig
@@ -1,6 +1,7 @@
 <div class="jumbotron paral paralsec d-flex flex-column align-items-center justify-content-center">
-    <h1 class="text-primary">WANNA GONNA</h1>
+    <h1 class="text-primary">{{ home_content.introTitle }}</h1>
     <p class="lead text-dark w-75 text-shadow" >
-        A collaborative platform for volunteering, which brings together people skills and the needs of associations, organizations, communities, people, public services all around the world. Together, we can make a change !
-    </p>
+
+        {{ home_content.introContent }}    </p>
+
 </div>
