--- a/templates/component/homepage/_whoweare.html.twig
+++ b/templates/component/homepage/_whoweare.html.twig
@@ -1,11 +1,11 @@
 
 <div id="whoweare" class="jumbotron paral paralsec2 d-flex flex-column align-items-center justify-content-center">
     <div class="home-section d-flex flex-column bg-light col-md-10 col-sm-10 rounded m-4 p-4 shadow">
-        <h2 class="text-primary">Who we are ?</h2>
+        <h2 class="text-primary">{{ home_content.section2Title }}</h2>
         <div class="w-100">
             <p class="lead text-dark" >
-                Procedente igitur mox tempore cum adventicium nihil inveniretur, relicta ora maritima in Lycaoniam adnexam Isauriae se contulerunt ibique densis intersaepientes itinera praetenturis provincialium et viatorum opibus pascebantur.
-            </p>
+                {{ home_content.section2Content }}            </p>
+
         </div>
         <div id="top-stats" class="d-flex justify-content-around">
             <div class="d-flex flex-column align-content-center text-center col my-4">
