--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -9,14 +9,19 @@
 @import "project";
 @import "~cropperjs";
 @import "notification";
+@import "tchat";
 
 
 .form-register {
   margin-top : 8rem;
 }
 
-p {
+p, h3, h4, a {
   font-family: Roboto;
+}
+
+h1, h2 {
+  font-family: Montserrat Alternates;
 }
 
 
