Fix Carousel + Taille Tab Active + Ajout Link Reset Password in profile

--- a/assets/styles/web-home.scss
+++ b/assets/styles/web-home.scss
@@ -54,10 +54,11 @@ html {
   }
 }
 
-.carousel,.item,.active{
+.carousel,.item {
   height:500px;
   width:100%;
 }
+
 #home-carousel, .carousel-inner{
   height:500px;
   width:100%;
