--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -16,16 +16,20 @@
                     {{ form_row(form.organization.registrationNb) }}
                 {% endif %}
                 {{ form_row(form.email) }}
-                {{ form_row(form.country) }}
-                {{ form_row(form.languages, {'attr': {'class': 'overflow-auto form-control checkbox-overflow'}}) }}
-            </div>
-            <div class="col d-flex flex-column justify-content-center align-items-center">
+                <p>Password</p>
+                <p class="text-left mb-4"><a href="{{ path('app_forgot_password_request') }}">Change Your Password</a></p>
 
+
+
+            </div>
+            <div class="col d-flex flex-column justify-content-center align-items-stretch">
+                {{ form_row(form.country) }}
                 {{ form_row(form.biography) }}
+                {{ form_row(form.languages, {'attr': {'class': 'overflow-auto form-control checkbox-overflow'}}) }}
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col text-center my-3">
                 <button class="btn btn-primary">Submit my modification</button>
                 {{ form_end(form) }}
             </div>
