--- a/templates/component/project/_project_files.html.twig
+++ b/templates/component/project/_project_files.html.twig
@@ -9,7 +9,7 @@
                     <li class="list-group-item list-group-item-action p-0">
                         <div class="d-flex w-100 justify-content-between">
                             <span> <i class="far fa-file"></i> - {{ file.name }}</span>
-                            <span><a href="/uploads/{{ file.name }}" download="{{ file.name }}">Download</a></span>
+                            <span><a href="/uploads/documents/projects/{{ file.name }}" download="{{ file.name }}">Download</a></span>
                         </div>
                         <span>{{ file.projectFile }}</span>
                         <span><small>{{ file.user }}</small></span>
