modif homepage bux fix

--- a/assets/styles/web-home.scss
+++ b/assets/styles/web-home.scss
@@ -19,6 +19,21 @@ html {
   border-bottom: 1px solid #f1f1f1;
 }
 
+@media screen and (max-width: 849px) {
+  #home-nav {
+    background-color: white;
+    position: sticky;
+  }
+}
+
+@media screen and (min-width: 850px) {
+  #home-nav {
+    background: transparent;
+    position: fixed;
+  }
+}
+
+
 #home-menu {
   scroll-behavior: smooth;
 }
