--- a/templates/component/homepage/_howdoesitwork.html.twig
+++ b/templates/component/homepage/_howdoesitwork.html.twig
@@ -1,6 +1,5 @@
-<div id="howdoesitwork">
-    <div class="row justify-content-sm-center">
-        <div class="home-section d-flex flex-column bg-light col-md-10 col-sm-10 rounded m-4 p-4 shadow">
+<div id="howdoesitwork" class="jumbotron paral paralsec2 d-flex flex-column align-items-center justify-content-center">
+<div class="home-section d-flex flex-column bg-light col-md-10 col-sm-10 rounded m-4 p-4 shadow">
             <h2 class="text-primary align-self-start">{{ home_content.section3Title }}</h2>
             <div class="row my-5">
                 <div class="col-lg-5 d-flex flex-column justify-content-center p-2">
@@ -23,5 +22,4 @@
                </div>
            </div>
         </div>
-    </div>
 </div>
