--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -32,7 +32,7 @@
         <div class="col-12 projectsdgs">
             <ul>
                 {% for sdg in sdgs %}
-                    <li><input type="checkbox" id="project_sdgs_{{ sdg.id }}" class="{{ sdg in project.sdgs ? 'checked' : '' }}"/>
+                    <li><input {{ sdg in project.sdgs ? 'checked' : '' }} type="checkbox" id="project_sdgs_{{ sdg.id }}" value="{{ sdg.id }}"/>
                         <label for="project_sdgs_{{ sdg.id }}">
                             <img src="{{ asset('build/images/sdg_icons/' ~ sdg.image) }}" style="width: 50px; height:50px"/>
                         </label>
