--- a/templates/component/project/_project_details.html.twig
+++ b/templates/component/project/_project_details.html.twig
@@ -6,7 +6,7 @@
             {% if project.cover == 'DEFAULT_COVER.png' %}
                 <img height="300" src="{{ asset('build/images/sdg_icons/DEFAULT_COVER.png') }}" alt="Project Cover">
             {% else %}
-                <img height="300" src="{{ asset('uploads/images/projectcover/') }}{{ project.cover }}" alt="Project Image">
+                <img class="h-100" src="{{ asset('uploads/images/projectcover/') }}{{ project.cover }}" alt="Project Image">
             {%  endif %}
         </div>
     </div>
