--- a/templates/component/homepage/_header.html.twig
+++ b/templates/component/homepage/_header.html.twig
@@ -1,4 +1,4 @@
-<nav id="home-nav" class="navbar navbar-expand-lg navbar-light w-100">
+<nav id="home-nav" class="navbar navbar-expand-lg navbar-light fixed-top w-100">
     <a class="navbar-brand" href="/">
         <img src="{{ asset('build/images/LogoColorOnWhite.png') }}" height="50" alt="">
     </a>
