--- a/templates/component/project/_project_details.html.twig
+++ b/templates/component/project/_project_details.html.twig
@@ -2,12 +2,14 @@
     <div>
         <h3>Description</h3>
         <p class="my-4">{{ project.description|raw }}</p>
-        <div class="d-flex justify-content-center">
-            {% if project.cover == 'DEFAULT_COVER.png' %}
-                <img height="300" src="{{ asset('build/images/sdg_icons/DEFAULT_COVER.png') }}" alt="Project Cover">
-            {% else %}
-                <img class="h-100" src="{{ asset('uploads/images/projectcover/') }}{{ project.cover }}" alt="Project Image">
-            {%  endif %}
+        <div class="container p-0">
+            <div class="row justify-content-center m-0">
+                {% if project.cover == 'DEFAULT_COVER.png' %}
+                    <img class="col-12 col-sm-7 col-md-5" src="{{ asset('build/images/sdg_icons/DEFAULT_COVER.png') }}" alt="Project Cover">
+                {% else %}
+                    <img class="col-12 col-sm-7 col-md-5" src="{{ asset('uploads/images/projectcover/') }}{{ project.cover }}" alt="Project Image">
+                {%  endif %}
+            </div>
         </div>
     </div>
 </div>
