Fixing Carousel, balise div in project, adding skills on projects, Unused Task Entity in Project Show

--- a/assets/styles/web-home.scss
+++ b/assets/styles/web-home.scss
@@ -54,9 +54,12 @@ html {
   }
 }
 
-.carousel,.item {
+#home-carousel, .carousel, .item, .carousel-inner  {
   height:500px;
   width:100%;
+  img {
+    height: 500px;
+  }
 }
 
 #home-carousel, .carousel-inner{
