--- a/templates/component/_project_list.html.twig
+++ b/templates/component/_project_list.html.twig
@@ -3,7 +3,7 @@
         <div class="ui-group">
             <div class="button-group filter-button-group text-center mb-5" data-filter-group="sdg">
                 <button class="border-0 p-0">
-                    <img class="project-filters" data-filter="*" src="{{ asset('build/images/sdg_icons/SDG_Wheel.png')}}" style="width: 50px" >
+                    <img class="project-filters" title="ANY SUSTAINABLE GOALS" data-filter="*" src="{{ asset('build/images/sdg_icons/SDG_Wheel.png')}}" style="width: 50px" >
                 </button>
                 {% for sdg in sdgs  %}
                     <button class="border-0 p-0">
@@ -56,7 +56,7 @@
 
                         <div class="card-body">
                             <h5 class="card-title"><a href="{{ path('project_show', {'id': project.id}) }}">{{ project.title }}</a></h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">{{ project.description }}</p>
                         </div>
                         <div class="card-footer">
                             <div>
