Fixing CKEditor with raw, size of project image, typo in One To One Message, Edit on blog

--- a/templates/component/_project_list.html.twig
+++ b/templates/component/_project_list.html.twig
@@ -56,7 +56,7 @@
 
                         <div class="card-body">
                             <h5 class="card-title"><a href="{{ path('project_show', {'id': project.id}) }}">{{ project.title }}</a></h5>
-                            <p class="card-text">{{ project.description }}</p>
+                            <p class="card-text">{{ project.description|raw }}</p>
                         </div>
                         <div class="card-footer">
                             <div>
