--- a/templates/component/message/_messages.html.twig
+++ b/templates/component/message/_messages.html.twig
@@ -6,7 +6,7 @@
                 <p><a href="{{ path('messages_new')}}">Write a new message to someone else</a></p>
                 {% if contacts is not empty %}
                     <div class="container p-0 m-0">
-                            <h2>All your conversations bellow</h2>
+                            <h2>All your conversations below</h2>
                         <div class="row">
                             {% for contact in contacts %}
                                 <div class="card task my-3 col-12 col-lg-5 mx-1">
