last commit for today

--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -19,7 +19,7 @@
             {% if app.user %}
                 {% if app.user.isParticipantOn(project) %}
                     <p class="alert alert-blueish text-center m-0">{{ app.user.getProjectRoleMessage(project) }}</p>
-                {% else %}
+                {% elseif project.status == constant('App\\Entity\\Project::STATUS_REQUEST_VALIDATED') %}
                     <a href="{{ path('project_participant_project', {'project': project.id}) }}">
                         <button class="btn btn-secondary text-light p-3">I want to contribute !</button>
                     </a>
