Change background picture

--- a/assets/styles/web-home.scss
+++ b/assets/styles/web-home.scss
@@ -110,7 +110,7 @@ html {
 }
 
 /* Image for Parallax Section */
-.paralsec {background-image: url("../images/youngTeam.jpg");}
+.paralsec {background-image: url("../images/youngTeam2.jpg");}
 .paralsec1 {background-image: url("https://img.webnots.com/2017/05/parallax1.jpg");}
 .paralsec2 {background-image: url("https://img.webnots.com/2015/11/parallax2.jpg");
 }
