target only carousel pictures for object fit

--- a/assets/styles/web-home.scss
+++ b/assets/styles/web-home.scss
@@ -125,7 +125,9 @@ html {
 .lead {
   text-shadow: white 1px 0 12px;
 }
-
-.img-fluid {
-  object-fit: none;
+.carousel-item {
+  .img-fluid {
+    object-fit: none;
+  }
 }
+
